footer + navbar + fixed gamble
ADDED HEADER:
- mobile responsive with a state switcher
- FA icons for visibility button

ADDED FOOTER:
- FA icons for links
- infinitely expandable using javascript objects
- uses sveltekit attribute thingies to determine window size and adjust as needed
- sticks to bottom using some layout shenanigans

QUALITY OF LIFE CHANGES:
- font size isn't as huge
- removed need to have <svelte:head> on every page and some layout fixes
- gambling simulator is no longer horrifically broken in general when not perfectly scaled
- the horizontal line on the home page now breaks the image
- made the max width for image rendering a bit lower

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -13,10 +13,9 @@ html {
         sans-serif;
     color: #cdcdcd;
     background-color: #2a2a2e;
-    font-weight: 300;
 
     p {
-        font-size: 24px;
+        font-size: 20px;
     }
 
     body {
@@ -42,6 +41,10 @@ html {
     h2 {
         font-size: 2.5rem;
         color: #dedede;
+        clear: both; // breaks past the images
+    }
+
+    hr {
         clear: both;
     }
 
@@ -65,7 +68,7 @@ html {
 
     .right-align,
     .left-align {
-        @media screen and (max-width: 1450px) {
+        @media screen and (max-width: 1200px) {
             float: none;
             display: block;
             margin-left: auto;
